fixed formatting issue

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
             <div class="row">
               <div class="col-12">
                 <ul class="m-0">
-                  <li>This Man’s Life directed by Todd Thompson</li>
-                  <li>Train Station Patron</li>
+                  <li>This Man’s Life directed by Todd Thompson - <em>Train Station Patron</em></li>
                 </ul>
               </div>
             </div>
