added bunny killer

--- a/index.html
+++ b/index.html
@@ -397,6 +397,25 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
           </div>
         </div>
 
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <a target="_blank" href="https://www.youtube.com/watch?v=lzvf2wXTpYw">
+              <img class="w-100" src="img/gallery/bunnie.jpg" alt="">
+            </a>
+            <div class="card-body">
+              <h6>Bunny Killer Lives With Me!</h6>
+              <p><i class="fas fa-film"></i> Animation</p>
+              <p class="card-text">An Assassin with her trusty Associate is on a quick rescue mission to save a High School Girl!
+
+Join in with the Bunny Killer alongside Kenya, as they take down the Smiley Face Gang! They have taken a School Girl hostage and they're on their way to rescue her. Will they be both reconnected once more?
+
+The Bunny Killer is an Action/Comedy Short Animation, inspired by modern anime. I hope you like the video!</p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=lzvf2wXTpYw">View Project</a>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </section>
