--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
                     <td><h6>Client</h6></td>
                   </tr>
                   <tr>
+                    <td>The Bunny Killer Lives With Me!</td>
+                    <td>Additional Voices</td>
+                    <td>Phillikun</td>
+                  </tr>
+                  <tr>
                     <td>Intermittent Fasting: All Time</td>
                     <td>Narrator</td>
                     <td>Carolyn Whitesell</td>
@@ -188,6 +193,11 @@
                     <td>Mondrea Memories </td>
                     <td>Additional Voices </td>
                     <td>DreamersEcho</td>
+                  </tr>
+                  <tr>
+                    <td>Imposter</td>
+                    <td>Lead</td>
+                    <td>Paradox Palette Studios</td>
                   </tr>
                 </tbody>
               </table>
@@ -232,7 +242,7 @@
           </div>
 
           <div class="text-center">
-            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume.pdf">
+            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v2.pdf">
               <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
               Download Resume
             </a>
