--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#resume">Resume</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
