--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
   />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <link rel="stylesheet" href="styles/imagehover.min.css">
 </head>
 <body>
 
@@ -274,171 +276,127 @@
     </div>
   </section>
 
-
   <section id="gallery" class="section">
-    <div class="container">
+    <div class="container text-center">
       <h2 class="text-center">Gallery</h2>
+
+      <!--- ROW 1--->
       <div class="row">
-
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.audible.com/pd/B088ZR6KZ4/?source_code=AUDFPWS0223189MWU-BK-ACX0-197268&ref=acx_bty_BK_ACX0_197268_pd_us">
+          <a target="_blank" href="https://www.amazon.com/IntermIttent-FastIng-all-tIme-Intermittent-ebook/dp/B084GQBCYV">
+            <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/audiobook_fasting.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Intermittent Fasting All Time by Carolyn Whitesell</h6>
-              <p><i class="fab fa-audible"></i> Audiobook</p>
-              <p>Non-fiction</p>
-              <p class="card-text">Have you ever met a colleague or friend you have not seen in a long time and you have been speechless? Instantly, you ask “what have you done to yourself? You look radiant, you lost weight and your face is the very image of health!"</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B088ZR6KZ4/?source_code=AUDFPWS0223189MWU-BK-ACX0-197268&ref=acx_bty_BK_ACX0_197268_pd_us">View Project</a>
-            </div>
-          </div>
+              <figcaption>
+                <h6>Intermittent Fasting All Time by Carolyn Whitesell</h6>
+                <p><i class="fab fa-audible"></i> Audiobook</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.audible.com/pd/B08BG4ZF64/?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">
-              <img src="img/gallery/keeper_of_secrets.jpg" alt="" class="w-100">
-            </a>
-            <div class="card-body">
-              <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
-              <p><i class="fab fa-audible"></i> Audiobook</p>
-              <p>Fiction (Mature themes)</p>
-              <p class="card-text">Sixteen-year-old Avery is in trouble, yet again, but this time, he’s in over his head. On the run, Avery is faced with hardships and fear. He must become what he’s always despised to survive. He discovers new reasons to hate, until fate brings him to Graymoor Mansion, and he discovers a disturbing connection to the past.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08BG4ZF64/?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">View Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.audible.com/pd/B08FWTTBQT/?source_code=AUDFPWS0223189MWU-BK-ACX0-211462">
+          <a target="_blank" href="https://www.audible.com/pd/Phantom-World-Audiobook/B08FWTTBQT?source_code=AUDFPWS0223189MWU-BK-ACX0-211462">
+            <figure class="imghvr-zoom-in">
               <img src="img/gallery/phantom.jpg" alt="" class="w-100">
-            </a>
-            <div class="card-body">
-              <h6 class="card-title">Phantom World by Mark A. Roeder</h6>
-              <p><i class="fab fa-audible"></i> Audiobook</p>
-              <p>Fiction (Mature themes)</p>
-              <p class="card-text">Toby Riester is 16, gay, and searching for his first boyfriend. He discovers many potential candidates - Orlando, a cute 16-year-old Hispanic boy who works with Toby at the Phantom World amusement park; CT, a blond 17-year-old who is obviously gay; and Spike, a well-built 16-year-old from the internet.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08FWTTBQT/?source_code=AUDFPWS0223189MWU-BK-ACX0-211462">View Project</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.youtube.com/watch?v=cUYxv52twvc">
-              <img class="w-100" src="img/gallery/kekoama.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Pokemon Nekoama Night of the Living Kids - Voice of Doduo and Zombified Pokemon</h6>
-              <p><i class="fas fa-book-open"></i> Comic Dub</p>
-              <p class="card-text">Squirtle, Charmander, and Wartortle end up in a Zombie Apocalypse?!</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=cUYxv52twvc">View Project</a>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://peanutparade.itch.io/steventon-street">
-              <img class="w-100" src="img/gallery/steventonstreet.png" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Steventon Street Demo - Voice of Will Drake</h6>
-              <p><i class="fas fa-gamepad"></i> Video Game</p>
-              <p class="card-text">Steventon Street is an otome dating sim in which you play as a woman who opens a bookstore in the fictional town of Peabody, Maryland. But nothing's ever simple for this Janeite, and she suddenly finds herself surrounded by new faces, as well as a few old ones.
-Each romantic storyline is a loose adaptation of one of Jane Austen's six novels.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://peanutparade.itch.io/steventon-street">View Project</a>
-            </div>
-          </div>
+              <figcaption>
+                <h6 class="card-title">Phantom World by Mark A. Roeder</h6>
+                <p><i class="fab fa-audible"></i> Audiobook</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://melancholy-marionette.itch.io/solipsism-reigns">
-              <img class="w-100" src="img/gallery/reigns.png" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Solipsism Reigns - Voice of Nexus and The Architect</h6>
-              <p><i class="fas fa-gamepad"></i> Video Game</p>
-              <p class="card-text">Become a Student, Mage, Clan Leader, Detective, or Gamer as you discover more about your true destiny. Travel through various dimensions to seek the truth about yourself and the worlds around you. Your only constant will be your yandere spirit companion, Kuro. Your guardian spirit, Kuro, takes many forms...</p>
-              <a class="btn btn-secondary" target="_blank" href="https://melancholy-marionette.itch.io/solipsism-reigns">View Project</a>
-            </div>
-          </div>
+          <a target="_blank" href="https://www.audible.com/pd/Keeper-of-Secrets-Audiobook/B08BG4ZF64?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">
+            <figure class="imghvr-zoom-in">
+              <img src="img/gallery/keeper_of_secrets.jpg" alt="" class="w-100">
+              <figcaption>
+                <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
+                <p><i class="fab fa-audible"></i> Audiobook</p>
+              </figcaption>
+            </figure>
+          </a>
         </div>
-
-        <!-- <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">
-              <img class="w-100" src="img/gallery/anya.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Anya’s Ghost - Voice of Sean</h6>
-              <p><i class="fas fa-book-open"></i> Comic Dub</p>
-              <p class="card-text">A girl from Russia trying to fit into American school life. Everything seems to be going wrong in her life, then she meets a mysterious and unlikely friend.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">View Project</a>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://melancholy-marionette.itch.io/impostor">
-              <img class="w-100" src="img/gallery/imposter.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Imposter</h6>
-              <p><i class="fas fa-gamepad"></i> Video Game</p>
-              <p class="card-text">This is a short horror-themed jam game created for the Halloween season as a creepy present! You come home from a long day at work to find your partner cooking dinner for you, but something isn't quite right...</p>
-              <a class="btn btn-secondary" target="_blank" href="https://melancholy-marionette.itch.io/impostor">View Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">
-              <img class="w-100" src="img/gallery/cursed_princess.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Cursed Princess Club Webtoon Dub - Prince “Jamie” James </h6>
-              <p><i class="fas fa-male"></i> Comic Dubs</p>
-              <p class="card-text">Meet Gwendolyn – living proof that princesses don’t always have it all. See, although she lives in a castle and her father is the King, Gwendolyn isn’t like a movie princess, or even a fairly-tale princess. She’s got a big heart, but isn’t particularly attractive and doesn’t have a Disney-quality singing voice. But one night, she accidentally stumbles upon the twisted world of the Cursed Princess Club, and her life will never be the same. </p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">View Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://www.youtube.com/watch?v=lzvf2wXTpYw">
-              <img class="w-100" src="img/gallery/bunnie.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Bunny Killer Lives With Me!</h6>
-              <p><i class="fas fa-film"></i> Animation</p>
-              <p class="card-text">An Assassin with her trusty Associate is on a quick rescue mission to save a High School Girl! Join in with the Bunny Killer alongside Kenya, as they take down the Smiley Face Gang! They have taken a School Girl hostage and they're on their way to rescue her. Will they be both reconnected once more? The Bunny Killer is an Action/Comedy Short Animation, inspired by modern anime. I hope you like the video!</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=lzvf2wXTpYw">View Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <a target="_blank" href="https://anchor.fm/jetfalco">
-              <img class="w-100" src="img/gallery/mondrea.jpg" alt="">
-            </a>
-            <div class="card-body">
-              <h6>Mondrea Memories - Tavern Extras</h6>
-              <p><i class="fas fa-file-audio"></i> Audio Drama</p>
-              <p class="card-text">An immersive audio odyssey into dreamless domain. Decode and reclaim lost memory from chaotic sound. For fans of sci-fi, fantasy, mind-bending thrillers, tales of power and ancient wonder. The epic tale of the DreamersEcho Universe begins here. Explore the podcast, comics, music, and more at DreamersEcho.com.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://anchor.fm/jetfalco">View Project</a>
-            </div>
-          </div>
-        </div>
-
       </div>
+
+      <!--- ROW 2--->
+      <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://peanutparade.itch.io/steventon-street">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/steventonstreet.png" alt="">
+              <figcaption>
+                <h6>Steventon Street Demo - Voice of Will Drake</h6>
+                <p><i class="fas fa-gamepad"></i> Video Game</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://melancholy-marionette.itch.io/solipsism-reigns">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/reigns.png" alt="">
+              <figcaption>
+                <h6>Solipsism Reigns - Voice of Nexus and The Architect</h6>
+                <p><i class="fas fa-gamepad"></i> Video Game</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://melancholy-marionette.itch.io/impostor">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/imposter.jpg" alt="">
+              <figcaption>
+                <h6>Imposter</h6>
+                <p><i class="fas fa-gamepad"></i> Video Game</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+
+      <!--- ROW 3--->
+      <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/cursed_princess.jpg" alt="">
+              <figcaption>
+                <h6>Cursed Princess Club Webtoon Dub - Prince “Jamie” James </h6>
+                <p><i class="fas fa-male"></i> Comic Dubs</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=lzvf2wXTpYw">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/bunnie.jpg" alt="">
+              <figcaption>
+                <h6>Bunny Killer Lives With Me!</h6>
+                <p><i class="fas fa-film"></i> Animation</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://anchor.fm/jetfalco">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/mondrea.jpg" alt="">
+              <figcaption>
+                <h6>Mondrea Memories - Tavern Extras</h6>
+                <p><i class="fas fa-file-audio"></i> Audio Drama</p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+
     </div>
   </section>
 
@@ -492,6 +450,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js" integrity="sha256-+Q/z/qVOexByW1Wpv81lTLvntnZQVYppIL1lBdhtIq0=" crossorigin="anonymous"></script> -->
   <script src="https://kit.fontawesome.com/021a13c840.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
