added sunless skies project

--- a/index.html
+++ b/index.html
@@ -287,8 +287,10 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/audiobook_fasting.jpg" alt="">
               <figcaption>
-                <h6>Intermittent Fasting All Time by Carolyn Whitesell</h6>
-                <p><i class="fab fa-audible"></i> Audiobook</p>
+                <div>
+                  <h6>Intermittent Fasting All Time by Carolyn Whitesell</h6>
+                  <p><i class="fab fa-audible"></i> Audiobook</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -299,8 +301,10 @@
             <figure class="imghvr-zoom-in">
               <img src="img/gallery/phantom.jpg" alt="" class="w-100">
               <figcaption>
-                <h6 class="card-title">Phantom World by Mark A. Roeder</h6>
-                <p><i class="fab fa-audible"></i> Audiobook</p>
+                <div>
+                  <h6 class="card-title">Phantom World by Mark A. Roeder</h6>
+                  <p><i class="fab fa-audible"></i> Audiobook</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -311,8 +315,10 @@
             <figure class="imghvr-zoom-in">
               <img src="img/gallery/keeper_of_secrets.jpg" alt="" class="w-100">
               <figcaption>
-                <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
-                <p><i class="fab fa-audible"></i> Audiobook</p>
+                <div>
+                  <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
+                  <p><i class="fab fa-audible"></i> Audiobook</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -326,8 +332,10 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/steventonstreet.png" alt="">
               <figcaption>
-                <h6>Steventon Street Demo - Voice of Will Drake</h6>
-                <p><i class="fas fa-gamepad"></i> Video Game</p>
+                <div>
+                  <h6>Steventon Street Demo - Voice of Will Drake</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -338,8 +346,10 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/reigns.png" alt="">
               <figcaption>
-                <h6>Solipsism Reigns - Voice of Nexus and The Architect</h6>
-                <p><i class="fas fa-gamepad"></i> Video Game</p>
+                <div>
+                  <h6>Solipsism Reigns - Voice of Nexus and The Architect</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -350,8 +360,10 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/imposter.jpg" alt="">
               <figcaption>
-                <h6>Imposter</h6>
-                <p><i class="fas fa-gamepad"></i> Video Game</p>
+                <div>
+                  <h6>Imposter</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -365,8 +377,10 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/cursed_princess.jpg" alt="">
               <figcaption>
-                <h6>Cursed Princess Club Webtoon Dub - Prince “Jamie” James </h6>
-                <p><i class="fas fa-male"></i> Comic Dubs</p>
+                <div>
+                  <h6>Cursed Princess Club Webtoon Dub - Prince “Jamie” James </h6>
+                  <p><i class="fas fa-male"></i> Comic Dubs</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -377,8 +391,10 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/bunnie.jpg" alt="">
               <figcaption>
-                <h6>Bunny Killer Lives With Me!</h6>
-                <p><i class="fas fa-film"></i> Animation</p>
+                <div>
+                  <h6>Bunny Killer Lives With Me!</h6>
+                  <p><i class="fas fa-film"></i> Animation</p>
+                </div>
               </figcaption>
             </figure>
           </a>
@@ -389,8 +405,26 @@
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/mondrea.jpg" alt="">
               <figcaption>
-                <h6>Mondrea Memories - Tavern Extras</h6>
-                <p><i class="fas fa-file-audio"></i> Audio Drama</p>
+                <div>
+                  <h6>Mondrea Memories - Tavern Extras</h6>
+                  <p><i class="fas fa-file-audio"></i> Audio Drama</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=kDkgEktf7M8">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/sunless_skies.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Anthologies of Ullord: Sunless Skies</h6>
+                  <p><i class="fas fa-file-audio"></i> Audio Drama</p>
+                </div>
               </figcaption>
             </figure>
           </a>
