--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
                     <td>Lead</td>
                     <td>Paradox Palette Studios</td>
                   </tr>
+                  <tr>
+                    <td>Sunless Skies</td>
+                    <td>Thad</td>
+                    <td>Phantasmal Bard Studios</td>
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -247,7 +252,7 @@
           </div>
 
           <div class="text-center">
-            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v2.pdf">
+            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v3.pdf">
               <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
               Download Resume
             </a>
