--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                   <li>Bachelor of Arts in Music from University of Florida</li>
                   <li>Online Voice Over Classes with Bill DeWees</li>
                   <li>Voice Over Study with Josh Martin</li>
+                  <li>ADR Practice and Study at Extra Terrible Studios</li>
                 </ul>
               </div>
             </div>
