added copyright script

--- a/index.html
+++ b/index.html
@@ -482,7 +482,9 @@
   </section>
 
   <footer>
-    <p class="m-0">Anthony Rodriguez Copyright © 2020</p>
+    <p class="m-0">
+      Anthony Rodriguez Copyright &copy; <script type="text/javascript">document.write(new Date().getFullYear());</script>
+    </p>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
