--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                   <li>Audio Technica AT2020</li>
                   <li>Audient ID4</li>
                   <li>Adobe Audition</li>
+                  <li>Professionally Treated Home Studio</li>
                 </ul>
               </div>
             </div>
@@ -230,7 +231,8 @@
                 <ul class="m-0">
                   <li>Bachelor of Arts in Music from University of Florida</li>
                   <li>Online Voice Over Classes with Bill DeWees</li>
-                  <li>Voice Over Study with Josh Martin</li>
+                  <li>Animation and Villain Study with Josh Martin</li>
+                  <li>Voice Over for Video Games with Rachael Messer</li>
                   <li>ADR Practice and Study at Extra Terrible Studios</li>
                 </ul>
               </div>
@@ -253,7 +255,7 @@
           </div>
 
           <div class="text-center">
-            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v3.pdf">
+            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v4.pdf">
               <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
               Download Resume
             </a>
@@ -272,7 +274,7 @@
         </div>
         <div class="col-lg-6 px-5 about-textwrap">
           <h2 class="text-center">About</h2>
-          <p>Anthony is an Actor and aspiring Voice Over Director born and raised in sunny Orlando, Florida.</p>
+          <p>Anthony is an Actor and Voice Over Director born and raised in sunny Orlando, Florida.</p>
           <p>He started acting and singing as a child in school and church productions including Peter Pan, Arsenic and Old Lace, You’re a Good Man Charlie Brown, The Music Man, and various other performances and concerts. His voice can be heard on professional recordings of choral works such as Mozart’s Requiem by the Bach Festival Society Choir directed by Dr. John Sinclair and other original works recorded during his time at the University of Florida.</p>
           <p>Anthony graduated with a Bachelor of Arts in Music for Voice from the University of Florida where he performed in multiple concerts and major works as well as a Voice Recital. During his time in University, and afterward, he was a member of multiple church choirs as a Cantor and choir member. In 2017 he moved to Kameoka (Kyoto Prefecture), Japan and married his lovely wife, Melissa. While he was in Japan he had many opportunities to share his talents and culture by performing and speaking at events at Galleria, Kameoka’s International Center, and around the city.</p>
 	        <p>After returning to Florida from Japan in 2019, Anthony decided to fully pursue an acting career. All the experience and confidence gained from moving to and living in a foreign country (without knowing how to communicate very well) inspired and motivated him to pursue his dreams wholeheartedly in his own country. In 2020 he, his wife, and cat, Tera moved to Dallas, Texas where they have been working full-time in Voice Over ever since.</p>
