--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div class="container text-center">
       <h2 class="text-center">Gallery</h2>
 
-      <!--- ROW 1--->
+      <!--- ROW 1 --->
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://www.amazon.com/IntermIttent-FastIng-all-tIme-Intermittent-ebook/dp/B084GQBCYV">
@@ -333,7 +333,7 @@
         </div>
       </div>
 
-      <!--- ROW 2--->
+      <!--- ROW 2 --->
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://peanutparade.itch.io/steventon-street">
@@ -378,7 +378,7 @@
         </div>
       </div>
 
-      <!--- ROW 3--->
+      <!--- ROW 3 --->
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
           <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">
@@ -423,7 +423,54 @@
         </div>
       </div>
 
+      <!--- ROW 4 --->
       <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://www.mediacontex.com/archmage">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/archmage.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>The Archmage Legacy</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://www.imdb.com/title/tt12844590/">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/apoyume.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Apocalyptic Dream</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://store.steampowered.com/app/1554530/Dreams_and_Nightmares/">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/dreams_nightmares.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Dreams and Nightmares</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+
+      <!--- ROW 5 --->
+      <div class="row">
+
         <div class="col-md-6 col-lg-4 mb-4">
           <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=kDkgEktf7M8">
             <figure class="imghvr-zoom-in">
@@ -437,7 +484,115 @@
             </figure>
           </a>
         </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=GoG8F9mcfsU">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/densetsu.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Angel Densetsu</h6>
+                  <p><i class="fas fa-male"></i> Comic Dubs</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://melancholy-marionette.itch.io/darling-duality-winter-wish">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/darling_duality.png" alt="">
+              <figcaption>
+                <div>
+                  <h6>Darling Duality</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
       </div>
+
+      <!--- ROW 6 --->
+      <div class="row">
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://crimson-sugar-studio.itch.io/last-one-standing-royal-massacre">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/lastonestanding.jpeg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Last One Standing: Royal Massacre</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <!-- <a target="_blank" href="https://crimson-sugar-studio.itch.io/last-one-standing-royal-massacre"> -->
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/circus.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Circus in the Woods (no link available)</h6>
+                  <p><i class="fas fa-gamepad"></i> Video Game</p>
+                </div>
+              </figcaption>
+            </figure>
+          <!-- </a> -->
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=L8rEdj4S6C0">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/shuumatsu.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Shuumatsu no Valkyrie</h6>
+                  <p><i class="fas fa-male"></i> Comic Dubs</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+
+      <!--- ROW 7 --->
+      <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=aGJUtWBscnk">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/mundelein.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>Into the Mundelein</h6>
+                  <p><i class="fas fa-male"></i> Comic Dubs</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <a target="_blank" href="https://thelibertasleague.com/cast/">
+            <figure class="imghvr-zoom-in">
+              <img class="w-100" src="img/gallery/libertasleague.jpg" alt="">
+              <figcaption>
+                <div>
+                  <h6>The Libertas League</h6>
+                  <p><i class="fas fa-male"></i> Misc</p>
+                </div>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+
+      </div>
+
 
     </div>
   </section>
