--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <li>Arsenic and Old Lace - <em>Mortimer Brewster</em></li>
                   <li>It&rsquo;s a Wonderful Life - <em>Stage Crew/Extra</em></li>
                   <li>The Music Man - <em>Professor Harold Hill</em></li>
-                  <li>The Magic Flute - <em>Tech Crew</em></li>
+                  <!-- <li>The Magic Flute - <em>Tech Crew</em></li> -->
                 </ul>
               </div>
             </div>
@@ -134,7 +134,7 @@
               </div>
             </div>
 
-            <h5>Church and Community</h5>
+            <!-- <h5>Church and Community</h5>
             <div class="row">
               <div class="col-12">
                 <ul class="m-0">
@@ -144,7 +144,7 @@
                   <li>All Saints Episcopal Church - <em>Cantor</em></li>
                 </ul>
               </div>
-            </div>
+            </div> -->
 
             <div class="table-wrap">
               <table class="voice-over-table">
@@ -160,6 +160,41 @@
                     <td><h6>Client</h6></td>
                   </tr>
                   <tr>
+                    <td>Conqueror’s Blade</td>
+                    <td>Constantine/Additional Voices</td>
+                    <td>Booming Technology</td>
+                  </tr>
+                  <tr>
+                    <td>GnollHack</td>
+                    <td>Neanderthal</td>
+                    <td>Sound Mind Games</td>
+                  </tr>
+                  <tr>
+                    <td>Connected Advertisement</td>
+                    <td>2 Characters</td>
+                    <td>National Council for Mental Wellbeing</td>
+                  </tr>
+                  <tr>
+                    <td>Clean Juice Advertisements</td>
+                    <td>Commercial VO</td>
+                    <td>Clean Juice</td>
+                  </tr>
+                  <tr>
+                    <td>Last One Standing: Royal Massacre</td>
+                    <td>Kuzma Semyonov</td>
+                    <td>Crimson Sugar Studio</td>
+                  </tr>
+                  <tr>
+                    <td>Dreams and Nightmares</td>
+                    <td>Raphael</td>
+                    <td>CGDC</td>
+                  </tr>
+                  <tr>
+                    <td>The Archmage Legacy</td>
+                    <td>Cyrus</td>
+                    <td>Story Sight Studios</td>
+                  </tr>
+                  <tr>
                     <td>The Bunny Killer Lives With Me!</td>
                     <td>Additional Voices</td>
                     <td>Phillikun</td>
@@ -168,6 +203,11 @@
                     <td>Intermittent Fasting: All Time</td>
                     <td>Narrator</td>
                     <td>Carolyn Whitesell</td>
+                  </tr>
+                  <tr>
+                    <td>Into the Mundelein</td>
+                    <td>Nathan/Additional Voices</td>
+                    <td>Half Mile</td>
                   </tr>
                   <tr>
                     <td>Steventon Street</td>
@@ -209,6 +249,16 @@
                     <td>Thad</td>
                     <td>Phantasmal Bard Studios</td>
                   </tr>
+                  <tr>
+                    <td>Apocalyptic Dream</td>
+                    <td>Mikio</td>
+                    <td>Melancholic Spring</td>
+                  </tr>
+                  <tr>
+                    <td>Circus in the Woods</td>
+                    <td>Leo</td>
+                    <td>Chance Enyer</td>
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -217,7 +267,7 @@
               <div class="col-12">
                 <h5>Equipment:</h5>
                 <ul>
-                  <li>Audio Technica AT2020</li>
+                  <li>AKG C214 Large-Diaphragm Condenser</li>
                   <li>Audient ID4</li>
                   <li>Adobe Audition</li>
                   <li>Professionally Treated Home Studio</li>
@@ -230,10 +280,11 @@
                 <h5>Education:</h5>
                 <ul class="m-0">
                   <li>Bachelor of Arts in Music from University of Florida</li>
-                  <li>Online Voice Over Classes with Bill DeWees</li>
-                  <li>Animation and Villain Study with Josh Martin</li>
-                  <li>Voice Over for Video Games with Rachael Messer</li>
-                  <li>ADR Practice and Study at Extra Terrible Studios</li>
+                  <li>Commercial Study - Bill DeWees</li>
+                  <li>Animation, Villain, ADR Study - Josh Martin</li>
+                  <li>Voice Over for Video Games - Rachael Messer</li>
+                  <li>ADR - Jason Lord/Extra Terrible Studios</li>
+                  <li>Acting with Kiba Walker</li>
                 </ul>
               </div>
             </div>
@@ -246,8 +297,8 @@
                   <li>Character Voices</li>
                   <li>Singing in French, German, Spanish, Latin, Japanese, Italian</li>
                   <li>Young Adult Male Voices</li>
-                  <li>Creature Voices</li>
-                  <li>French/Japanese Accent</li>
+                  <!-- <li>Creature Voices</li> -->
+                  <li>French/Japanese/Mexican Accent</li>
                 </ul>
               </div>
             </div>
@@ -255,7 +306,7 @@
           </div>
 
           <div class="text-center">
-            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v4.pdf">
+            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v5.pdf">
               <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
               Download Resume
             </a>
@@ -532,7 +583,8 @@
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=aGJUtWBscnk">
+          <!-- non embed link yt link -->
+          <a target="_blank" href="https://www.youtube.com/watch?v=aGJUtWBscnk">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/mundelein.jpg" alt="">
               <figcaption>
@@ -546,7 +598,8 @@
         </div>
 
         <div class="col-md-6 col-lg-4 mb-4">
-          <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=L8rEdj4S6C0">
+          <!-- non embed link yt link -->
+          <a target="_blank" href="https://www.youtube.com/watch?v=L8rEdj4S6C0">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/shuumatsu.jpg" alt="">
               <figcaption>
