fixed gallery bug

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="#gall">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -335,7 +335,7 @@
     </div>
   </section>
 
-  <section id="gallery" class="section">
+  <section id="gall" class="section">
     <div class="container text-center">
       <h2 class="text-center">Gallery</h2>
 
