new demo, removed gallery items

--- a/index.html
+++ b/index.html
@@ -67,30 +67,30 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
             <a target="_blank" href="files/animation.mp3" class="btn btn-primary">
               Animation
               <i class="far fa-play-circle"></i>
             </a>
-          </div>
-          <div class="col-sm-6 col-md-3">
+          </div> -->
+          <div class="col-sm-6">
             <a target="_blank" href="files/commercial.mp3" class="btn btn-primary">
               Commercial
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6">
             <a target="_blank" href="files/character.mp3" class="btn btn-primary">
               Character
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
             <a target="_blank" href="files/videogame.mp3" class="btn btn-primary">
               Video Game
               <i class="far fa-play-circle"></i>
             </a>
-          </div>
+          </div> -->
           <!-- <div class="col-sm-6 col-md-3">
             <a target="_blank" href="files/audiobook.mp3" class="btn btn-primary">
               Audiobook
@@ -382,10 +382,7 @@
             </figure>
           </a>
         </div>
-      </div>
 
-      <!--- ROW 2 --->
-      <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://peanutparade.itch.io/steventon-street">
             <figure class="imghvr-zoom-in">
@@ -427,10 +424,7 @@
             </figure>
           </a>
         </div>
-      </div>
 
-      <!--- ROW 3 --->
-      <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
           <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">
             <figure class="imghvr-zoom-in">
@@ -472,10 +466,7 @@
             </figure>
           </a>
         </div>
-      </div>
 
-      <!--- ROW 4 --->
-      <div class="row">
         <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://www.mediacontex.com/archmage">
             <figure class="imghvr-zoom-in">
@@ -517,12 +508,8 @@
             </figure>
           </a>
         </div>
-      </div>
 
-      <!--- ROW 5 --->
-      <div class="row">
-
-        <div class="col-md-6 col-lg-4 mb-4">
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
           <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=kDkgEktf7M8">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/sunless_skies.jpg" alt="">
@@ -534,9 +521,9 @@
               </figcaption>
             </figure>
           </a>
-        </div>
+        </div> -->
 
-        <div class="col-md-6 col-lg-4 mb-4">
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
           <a data-fancybox="gallery" href="https://www.youtube.com/watch?v=GoG8F9mcfsU">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/densetsu.jpg" alt="">
@@ -548,7 +535,7 @@
               </figcaption>
             </figure>
           </a>
-        </div>
+        </div> -->
 
         <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://melancholy-marionette.itch.io/darling-duality-winter-wish">
@@ -563,10 +550,6 @@
             </figure>
           </a>
         </div>
-      </div>
-
-      <!--- ROW 6 --->
-      <div class="row">
 
         <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://crimson-sugar-studio.itch.io/last-one-standing-royal-massacre">
@@ -582,8 +565,8 @@
           </a>
         </div>
 
-        <div class="col-md-6 col-lg-4 mb-4">
-          <!-- non embed link yt link -->
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
+
           <a target="_blank" href="https://www.youtube.com/watch?v=aGJUtWBscnk">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/mundelein.jpg" alt="">
@@ -595,10 +578,10 @@
               </figcaption>
             </figure>
           </a>
-        </div>
-
+        </div> -->
+<!--
         <div class="col-md-6 col-lg-4 mb-4">
-          <!-- non embed link yt link -->
+
           <a target="_blank" href="https://www.youtube.com/watch?v=L8rEdj4S6C0">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/shuumatsu.jpg" alt="">
@@ -610,13 +593,8 @@
               </figcaption>
             </figure>
           </a>
-        </div>
-      </div>
-
-      <!--- ROW 7 --->
-      <div class="row">
-        <div class="col-md-6 col-lg-4 mb-4">
-          <!-- <a target="_blank" href="https://crimson-sugar-studio.itch.io/last-one-standing-royal-massacre"> -->
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/circus.jpg" alt="">
               <figcaption>
@@ -626,10 +604,9 @@
                 </div>
               </figcaption>
             </figure>
-          <!-- </a> -->
-        </div>
+        </div> -->
 
-        <div class="col-md-6 col-lg-4 mb-4">
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
           <a target="_blank" href="https://thelibertasleague.com/cast/">
             <figure class="imghvr-zoom-in">
               <img class="w-100" src="img/gallery/libertasleague.jpg" alt="">
@@ -641,7 +618,7 @@
               </figcaption>
             </figure>
           </a>
-        </div>
+        </div> -->
 
 
       </div>
