updated resume - pdf and web

--- a/index.html
+++ b/index.html
@@ -159,6 +159,33 @@
                     <td><h6>Character</h6></td>
                     <td><h6>Client</h6></td>
                   </tr>
+
+                  <tr>
+                    <td>Sounds of Seerah</td>
+                    <td>Waraqah and Addaass</td>
+                    <td>Masjid Rats</td>
+                  </tr>
+                  <tr>
+                    <td>What I Meant Was</td>
+                    <td>Boy Explainer</td>
+                    <td>Rawtoy Games</td>
+                  </tr>
+                  <tr>
+                    <td>Spin Me Right Round</td>
+                    <td>Narrator</td>
+                    <td>Essential Audiobooks</td>
+                  </tr>
+                  <tr>
+                    <td>Limbo Line</td>
+                    <td>Ubel/Additional Voices</td>
+                    <td>Paradox Palette Studios</td>
+                  </tr>
+                  <tr>
+                    <td>AFK Arena</td>
+                    <td>Commercial</td>
+                    <td>Lilith Network HK Limited</td>
+                  </tr>
+
                   <tr>
                     <td>Conqueror’s Blade</td>
                     <td>Constantine/Additional Voices</td>
@@ -306,7 +333,7 @@
           </div>
 
           <div class="text-center">
-            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v5.pdf">
+            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume-v6.pdf">
               <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
               Download Resume
             </a>
